--- a/style.css
+++ b/style.css
@@ -265,7 +265,6 @@ header {
   inset: auto auto 30px 30px;
   margin: 0;
   transition: inset 0.3s 0.3s ease-out;
-  font-family: "Roboto Condensed", sans-serif;
   font-weight: normal;
   text-transform: uppercase;
   padding: 50px;
@@ -301,4 +300,12 @@ header {
 
 .material-symbols-outlined {
   vertical-align: middle;
+}
+
+.second-button{
+  padding: 1rem 3rem;
+  text-align: center;
+  background: transparent;
+  margin-top: 4.5rem;
+  text-transform: uppercase;
 }
