--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ header {
   padding: 6rem 1rem;
 }
 
-.class-item--wrapper{
+.class-item--wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -275,11 +275,8 @@ header {
   opacity: 0;
   max-width: 80%;
   transition: opacity 0.3s ease-out;
+}
 
-}
-.card p {
-  inset: auto auto 80px 30px;
-}
 .card a {
   inset: auto auto 40px 30px;
   color: inherit;
@@ -289,7 +286,8 @@ header {
   inset: auto auto 220px 30px;
   transition: inset 0.3s ease-out;
 }
-.card:hover p, .card:hover a {
+.card:hover p,
+.card:hover a {
   opacity: 1;
   transition: opacity 0.5s 0.1s ease-in;
 }
@@ -302,10 +300,220 @@ header {
   vertical-align: middle;
 }
 
-.second-button{
+.second-button {
   padding: 1rem 3rem;
   text-align: center;
   background: transparent;
   margin-top: 4.5rem;
   text-transform: uppercase;
+}
+
+.bg-video {
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+}
+
+.bg-video__content {
+  height: 100%;
+  width: 100%;
+}
+
+.fourth__section {
+  position: relative;
+}
+
+.fourth__section--header {
+  font-size: 2.5rem;
+  letter-spacing: 0.7rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.fourth__section-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fifth__section {
+  background-color: #000000;
+  margin-top: -0.5rem;
+}
+
+.fifth__section--titles {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 6rem;
+}
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 40rem;
+  padding-bottom: 6rem;
+}
+.card__side {
+  transition: all 0.8s ease;
+  position: absolute;
+  height: 40rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  backface-visibility: hidden;
+  border-radius: 3px;
+  overflow: hidden;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+}
+.card__side--front {
+  background-color: #151515;
+}
+.card__side--back {
+  transform: rotateY(-180deg);
+}
+.card__side--back-1 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(244, 1, 1, 0.5),
+    rgba(255, 61, 51, 0.7)
+  );
+}
+.card__side--back-2 {
+  background-image: linear-gradient(to right bottom, rgba(244, 1, 1, 0.5),
+  rgba(255, 61, 51, 0.7));
+}
+.card__side--back-3 {
+  background-image: linear-gradient(to right bottom, rgba(244, 1, 1, 0.5),
+  rgba(255, 61, 51, 0.7));
+}
+.card:hover .card__side--front {
+  transform: rotateY(180deg);
+}
+.card:hover .card__side--back {
+  transform: rotateY(0);
+}
+.card__picture {
+  background-size: cover;
+  height: 23rem;
+  background-blend-mode: screen;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+.card__picture--1 {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(244, 1, 1, 0.5),
+      rgba(255, 61, 51, 0.7)
+    ),
+    url(./assests/imgs/pexels-davner-ribeiro-4574154.jpg);
+}
+.card__picture--2 {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(244, 1, 1, 0.5),
+      rgba(255, 61, 51, 0.7)
+    ),
+    url(./assests/imgs/pexels-ivan-samkov-4164761.jpg);
+}
+.card__picture--3 {
+  background-image: linear-gradient(to right bottom, rgba(244, 1, 1, 0.5),
+  rgba(255, 61, 51, 0.7)),
+    url(./assests/imgs/pexels-cesar-galeão-3289711.jpg);
+}
+.card__heading {
+  font-size: 2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: right;
+  color: #fff;
+  position: absolute;
+  top: 12rem;
+  right: 2rem;
+  width: 75%;
+}
+.card__heading-span {
+  padding: 0.3rem 1.5rem;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
+.card__heading-span--1 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(244, 1, 1, 0.5),
+    rgba(255, 61, 51, 0.7)
+  );
+}
+.card__heading-span--2 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(244, 1, 1, 0.5),
+    rgba(255, 61, 51, 0.7)
+  );
+}
+.card__heading-span--3 {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(244, 1, 1, 0.5),
+    rgba(255, 61, 51, 0.7)
+  );
+}
+.card__details {
+  color: #fff;
+  margin-left: 1rem;
+}
+.card__details ul {
+  list-style: none;
+  width: 80%;
+}
+.card__details ul li {
+  text-align: center;
+  font-size: 1rem;
+  padding: 1rem;
+}
+.card__details ul li:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.card__cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  text-align: center;
+}
+.card__price-box {
+  text-align: center;
+  margin-bottom: 8rem;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card__price-only {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  
+  
+}
+.card__price-value {
+  font-size: 6rem;
+  font-weight: 100;
+
+}
+
+.card__plan {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 6rem 1rem;
 }
