--- a/style.css
+++ b/style.css
@@ -159,17 +159,56 @@ header {
   padding: 7rem 0rem 2rem 3.5rem;
 }
 
-.btn {
+.btn{
   padding: 1rem 3rem;
   text-align: center;
   background: transparent;
   margin-left: 3.5rem;
   text-transform: uppercase;
+  cursor: pointer;
+  position: relative;
+}
+
+.btn > span {
+  display: inline-block;
+  padding: 8px 16px;
+  background: linear-gradient(45deg, #f40101 50%, #fff 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(45deg, #fff 50%, transparent 50%);
+  z-index: -1;
+}
+
+
+.btn > span,
+.btn:after {
+  background-size: 300%;
+  background-position: 100%;
+  transition: 1s, font-size 0.2s;
+}
+
+.btn:hover > span,
+.btn:hover:after {
+  background-position: 0;
+  font-size: 1.1em;
+
+  color: #fff;
+  /*For IE*/
 }
 
 .btn-white {
   color: #fff;
   border: 2px solid #fff;
+  cursor: pointer;
 }
 
 .secondary__section {
@@ -240,7 +279,7 @@ header {
   justify-content: space-around;
 }
 
-.card {
+.tertiary__section--card {
   width: 24rem;
   height: 36rem;
   border-radius: 10px;
@@ -250,7 +289,7 @@ header {
   color: #f0f0f0;
   box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
 }
-.card img {
+.tertiary__section--card img {
   position: absolute;
   object-fit: cover;
   width: 100%;
@@ -260,7 +299,7 @@ header {
   opacity: 0.9;
   transition: opacity 0.2s ease-out;
 }
-.card h2 {
+.tertiary__section--card h2 {
   position: absolute;
   inset: auto auto 30px 30px;
   margin: 0;
@@ -269,29 +308,31 @@ header {
   text-transform: uppercase;
   padding: 50px;
 }
-.card p,
-.card a {
+.tertiary__section--card p,
+.tertiary__section--card a {
   position: absolute;
   opacity: 0;
   max-width: 80%;
   transition: opacity 0.3s ease-out;
 }
-
-.card a {
+.tertiary__section--card p {
+  inset: auto auto 80px 30px;
+}
+.tertiary__section--card a {
   inset: auto auto 40px 30px;
   color: inherit;
   text-decoration: none;
 }
-.card:hover h2 {
+.tertiary__section--card:hover h2 {
   inset: auto auto 220px 30px;
   transition: inset 0.3s ease-out;
 }
-.card:hover p,
-.card:hover a {
+.tertiary__section--card:hover p,
+.tertiary__section--card:hover a {
   opacity: 1;
   transition: opacity 0.5s 0.1s ease-in;
 }
-.card:hover img {
+.tertiary__section--card:hover img {
   transition: opacity 0.3s ease-in;
   opacity: 1;
 }
@@ -359,7 +400,9 @@ header {
   -moz-perspective: 150rem;
   position: relative;
   height: 40rem;
+  width: 30rem;
   padding-bottom: 6rem;
+  cursor: pointer;
 }
 .card__side {
   transition: all 0.8s ease;
@@ -387,12 +430,18 @@ header {
   );
 }
 .card__side--back-2 {
-  background-image: linear-gradient(to right bottom, rgba(244, 1, 1, 0.5),
-  rgba(255, 61, 51, 0.7));
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(244, 1, 1, 0.5),
+    rgba(255, 61, 51, 0.7)
+  );
 }
 .card__side--back-3 {
-  background-image: linear-gradient(to right bottom, rgba(244, 1, 1, 0.5),
-  rgba(255, 61, 51, 0.7));
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(244, 1, 1, 0.5),
+    rgba(255, 61, 51, 0.7)
+  );
 }
 .card:hover .card__side--front {
   transform: rotateY(180deg);
@@ -426,8 +475,11 @@ header {
     url(./assests/imgs/pexels-ivan-samkov-4164761.jpg);
 }
 .card__picture--3 {
-  background-image: linear-gradient(to right bottom, rgba(244, 1, 1, 0.5),
-  rgba(255, 61, 51, 0.7)),
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(244, 1, 1, 0.5),
+      rgba(255, 61, 51, 0.7)
+    ),
     url(./assests/imgs/pexels-cesar-galeão-3289711.jpg);
 }
 .card__heading {
@@ -502,13 +554,11 @@ header {
 .card__price-only {
   font-size: 1.4rem;
   text-transform: uppercase;
-  
-  
+  position: absolute;
 }
 .card__price-value {
   font-size: 6rem;
   font-weight: 100;
-
 }
 
 .card__plan {
@@ -516,4 +566,237 @@ header {
   flex-direction: row;
   justify-content: space-evenly;
   padding: 6rem 1rem;
+}
+
+.sixth__section {
+  background-color: #151515;
+}
+
+.sixth__section--contact-me {
+  display: flex;
+  flex-direction: row;
+  padding: 3rem 1rem;
+}
+
+.sixth__section--contact-me div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.contact-me__icons {
+  background-color: red;
+  border-radius: 50%;
+  padding: 1rem;
+  width: 10%;
+}
+
+.contact-me__description {
+  color: #fff;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  padding: 4rem 1rem;
+  background-color: #000000;
+  color: #fff;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.footer-description {
+  width: 20rem;
+  font-size: 0.9rem;
+}
+
+.footer-title {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.footer-links ul li a {
+  color: #eee;
+}
+
+.footer-links ul {
+  padding: 0;
+}
+
+.footer-links ul li {
+  line-height: 2rem;
+  position: relative;
+}
+
+.footer-links ul li::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: #f40101;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.footer-links ul li:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+.footer-logo {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 3.5rem;
+}
+
+.contact-me__first-section {
+  background-image: url(./assests/imgs/pexels-lukas-669584.jpg);
+  height: 35rem;
+  width: auto;
+  background-position: top;
+  background-size: cover;
+  position: relative;
+}
+
+.contact-me__first-section--header {
+  color: #fff;
+  font-size: 4rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.contact-me__second-section {
+  background-color: #151515;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 6rem 1rem;
+  align-items: center;
+}
+
+.second__section--contact-me > * {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 2rem;
+}
+
+.second__section--contact-me {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.second__section--contact-me div img {
+  width: 4rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin-right: 10rem;
+  margin-top: 4rem;
+  gap: 3rem;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.input input,
+textarea {
+  width: 18rem;
+  padding: 8px 0;
+  border: none;
+  border-bottom: 1px solid #d9d9d9;
+  font-size: 14px;
+  font-weight: 300;
+  transition: 300ms;
+  background-color: transparent;
+  color: #fff;
+}
+
+.input input:focus,
+textarea:focus {
+  outline: none;
+  box-shadow: 0 1px 0 0 #f40101;
+  border-color: #f40101;
+}
+
+.label,
+.label-textarea {
+  position: absolute;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  transition: 300ms ease;
+}
+
+.label label {
+  display: block;
+  font-size: 14px;
+  color: #d9d9d9;
+}
+
+input:focus + .label,
+input:not(:placeholder-shown) + .label {
+  transform: translateY(-27px);
+}
+
+input:focus + .label label,
+input:not(:placeholder-shown) + .label label {
+  font-weight: 500;
+  color: #fff;
+}
+
+.btn-submit {
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid #f40101;
+  color: #fff;
+  font-size: 14px;
+  width: 6.9rem;
+  padding-bottom: 0.5rem;
+  font-weight: 700;
+  align-self: end;
+}
+
+.btn-submit:hover {
+  cursor: pointer;
+  color: #f40101;
+  transition: 300ms ease;
+}
+
+textarea {
+  padding-top: 2rem;
+}
+
+.label-textarea {
+  padding-bottom: 6rem;
+  font-size: 14px;
+}
+
+textarea:focus + .label,
+textarea:not(:placeholder-shown) + .label {
+  transform: translateY(-27px);
+}
+
+textarea:focus + .label label,
+textarea:not(:placeholder-shown) + .label label {
+  font-weight: 500;
+  color: #fff;
+}
+
+#map {
+  height: 30rem;
 }
