--- a/style.css
+++ b/style.css
@@ -934,8 +934,6 @@ textarea:not(:placeholder-shown) + .label label {
   position: relative;
 }
 
-
-
 .testimonial__header {
   font-size: 2.25rem;
   font-weight: 500;
@@ -954,13 +952,12 @@ textarea:not(:placeholder-shown) + .label label {
 
   display: grid;
   grid-template-columns: 7rem 1fr;
-  
 }
 
 .testimonial__photo {
   grid-row: 1 / span 2;
   width: 10rem;
-aspect-ratio: 1/1;
+  aspect-ratio: 1/1;
   border-radius: 50%;
 }
 
@@ -979,5 +976,85 @@ aspect-ratio: 1/1;
 
 .section__title--testimonials {
   margin-bottom: 4rem;
+}
+
+.gallery_second-section{
+  background-color: #000000;
+  padding-bottom: .5rem;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 5vw);
+  grid-gap: .3rem;
+}
+
+.gallery__img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  transition: transform 0.8s;
+}
+
+
+.gallery__item--1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  overflow: hidden;
+ 
+ 
+}
+
+
+.gallery__item--2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  overflow: hidden;
+}
+
+
+.gallery__item--3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 6;
+  overflow: hidden;
+}
+
+
+.gallery__item--4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 6;
+  overflow: hidden;
+}
+
+
+.gallery__item--5 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 6;
+  grid-row-end: 9;
+  overflow: hidden;
+}
+
+
+.gallery__item--6 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 6;
+    grid-row-end: 9;
+    overflow: hidden;
+}
+
+.gallery__img:hover{
+  transform: scale(1.5);
 }
 
