--- a/style.css
+++ b/style.css
@@ -91,6 +91,22 @@ header {
   background-color: #000000;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* added line */
+  border: 0;
+}
+
+.mobile-nav-toggle {
+  display: none;
+}
+
 .navigation__nav {
   display: flex;
   flex-direction: row;
@@ -130,14 +146,13 @@ header {
 .navigation-social--icon:hover {
   filter: invert(10%) sepia(100%) saturate(5215%) hue-rotate(1deg)
     brightness(108%) contrast(118%);
-  
 }
 
 /* First Section */
 
 .primary__section {
   background-image: url(./assests/imgs/pexels-tima-miroshnichenko-5327487.jpg);
-  height: 54.35rem;
+  height: 95vh;
   width: auto;
   background-position: top;
   background-size: cover;
@@ -1356,4 +1371,166 @@ and also iPads specifically.
 
 .quick-fix {
   margin-top: -0.5rem;
+}
+
+@media (max-width: 35rem) {
+  .navigation__list {
+    --underline-gap: 0.5rem;
+    position: fixed;
+    z-index: 1000;
+    inset: 0 0 0 30%;
+    list-style: none;
+    padding: min(20rem, 15vh) 2rem;
+    margin: 0;
+    flex-direction: column;
+    transform: translateX(100%);
+    transition: transform 500ms ease-in-out;
+    background: rgba(21, 21, 21, 0.5);
+
+    backdrop-filter: blur(7.5px);
+    -webkit-backdrop-filter: blur(7.5px);
+
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    z-index: 2000;
+    right: 3rem;
+    top: 1rem;
+    background: transparent;
+    background-image: url(./assests/imgs/icon-hamburger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.5rem;
+    aspect-ratio: 1;
+    border: 0;
+  }
+
+  .mobile-nav-toggle[aria-expanded="true"] {
+    background-image: url(./assests/imgs/icon-close.svg);
+  }
+
+  .mobile-nav-toggle:focus-visible {
+    outline: 5px solid white;
+    outline-offset: 5px;
+  }
+
+  .navigation__list[data-visible="true"] {
+    transform: translateX(0);
+  }
+
+  .mobile-nav-toggle:focus-visible {
+    outline: 5px solid white;
+    outline-offset: 5px;
+  }
+
+  .navigation-social {
+    display: none;
+  }
+
+  .navigation__nav {
+    height: 3.5rem;
+  }
+
+  .secondary__section--card {
+    display: flex;
+    flex-direction: column;
+    padding-top: 0;
+    gap: 2rem;
+  }
+
+  .secondary__section--heading{
+    font-size: 100%;
+  }
+
+  .class-item--wrapper {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .fourth__section-content {
+    align-items: flex-start;
+  }
+
+  .fourth__section--header {
+    font-size: 1.5rem;
+  }
+
+  .fourth__section-content > button {
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+
+  .card {
+    width: 20rem;
+  }
+
+  .card__plan {
+    flex-direction: column;
+    gap: 1rem;
+    margin-left: 1rem;
+  }
+
+  .card__cta > button {
+    margin-right: 3.5rem;
+  }
+
+  .tertiary__section--card {
+    width: 22rem;
+    height: 26rem;
+  }
+
+  .primary__section div {
+    width: 100%;
+  }
+
+  .primary__section--heading {
+    font-size: 100%;
+    width: 100%;
+    padding-left: 2.5rem;
+  }
+
+  .primary__section > div:nth-child(1) > button:nth-child(2) {
+    margin-left: 2rem;
+  }
+
+  .sixth__section--contact-me {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .btn {
+    padding: 0.5rem 2rem;
+  }
+
+  .btn > span {
+    padding: 0;
+  }
+
+  .sixth__section--contact-me > div:nth-child(2) {
+    margin-right: 8rem;
+  }
+
+  .sixth__section--contact-me > div:nth-child(1) {
+    margin-right: 3.2rem;
+  }
+
+  .contact-me__icons {
+    width: 3rem;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .footer-links{
+    width: 20rem;
+  }
 }
