--- a/style.css
+++ b/style.css
@@ -1533,6 +1533,77 @@ and also iPads specifically.
   .footer-links {
     width: 20rem;
   }
+
+  .about-me__third-section {
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .about-me__third-section-description {
+    width: 100%;
+  }
+
+  .about-me__third-section-description:last-child {
+    width: 100%;
+    text-align: center;
+  }
+
+  .slide {
+    height: 15rem;
+  }
+
+  .testimonial__text,
+  .testimonial__name,
+  .testimonial__location {
+    font-size: 100%;
+  }
+
+  .testimonial__photo {
+    width: 5rem;
+  }
+
+  .slider__btn--left,
+  .slider__btn--right {
+    display: none;
+  }
+
+  .dots {
+    left: 50%;
+    bottom: 37%;
+  }
+
+  #questions-wrapper {
+    max-width: 100%;
+  }
+
+  .our-team__card-wrapper {
+    flex-direction: column;
+
+    align-items: center;
+  }
+
+  .our-team__card-wrapper {
+    padding: 1rem 1rem;
+  }
+
+  .our-team__card-wrapper:last-child {
+    padding-bottom: 6rem;
+  }
+
+  .contact-me__second-section {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #myForm {
+    margin-right: 0rem;
+  }
+
+  .gallery {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+  }
 }
 
 @media (min-width: 35rem) and (max-width: 64rem) {
@@ -1624,7 +1695,7 @@ and also iPads specifically.
     width: 3rem;
   }
 
-  .sixth__section--contact-me{
+  .sixth__section--contact-me {
     justify-content: center;
     gap: 1.5rem;
   }
@@ -1636,5 +1707,39 @@ and also iPads specifically.
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
     justify-items: center;
+  }
+
+  .about-me__third-section {
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .about-me__third-section-description {
+    width: 100%;
+  }
+
+  .about-me__third-section-description:last-child {
+    width: 100%;
+    text-align: center;
+  }
+
+  .slider__btn--left,
+  .slider__btn--right {
+    font-size: 1rem;
+    width: 3rem;
+    height: 3rem;
+  }
+
+  #questions-wrapper {
+    max-width: 100%;
+  }
+
+  .contact-me__second-section {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #myForm {
+    margin-right: 0rem;
   }
 }
